# cilantrify

./: .gitignore  README.md
api/: Cargo.toml  Dockerfile  build.rs  fly.toml
api/entity/: Cargo.toml
api/entity/src/entities/: ingredient.rs  mod.rs  prelude.rs  recipe.rs  sea_orm_active_enums.rs  sign_in_code.rs  user.rs
api/migration/src/: lib.rs  m20230505_014014_create_users.rs  m20230525_004403_create_recipes.rs  m20230601_025202_create_recipes.rs  m20230601_043905_create_ingredients.rs  m20230619_061749_create_sign_in_codes.rs
api/migrations/: 20230620221800_create_measurement_unit_type.sql  20230620221819_create_ingredients_table.sql  20230620221842_create_recipes_table.sql  20230620221902_create_sign_in_codes_table.sql
api/migrations/down/: 20230622033844_drop_sign_in_codes_table.sql  20230622033919_drop_ingredients_table.sql  20230622034001_drop_recipes_table.sql  20230622034037_drop_measurement_unit_type.sql  20230622034106_drop_users_table.sql
api/migrations/temp/: 20230730092413_create_user_following_user_table.sql
api/migrations/up/: 20230620221739_create_users_table.sql  20230620221800_create_measurement_unit_type.sql  20230620221819_create_recipes_table.sql  20230620221842_create_ingredients_table.sql  20230620221902_create_sign_in_codes_table.sql  20230730002820_create_categories_table.sql  20230730002936_create_recipes_in_categories_table.sql  20230730003055_create_recipe_books_table.sql  20230730003552_create_recipes_in_recipe_books_table.sql  20230730005919_create_recipe_reviews_table.sql
api/src/: lib.rs  main.rs
api/src/middleware/: auth.rs
api/src/routes/: mod.rs
api/src/routes/auth/: google.rs  jwt.rs  mod.rs  sso.rs
api/src/routes/profiles/: fetch.rs  mod.rs  update.rs
api/src/routes/recipes/: create.rs  delete.rs  fetch.rs  mod.rs  search.rs  update.rs
ui/: Cargo.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
ui/src/: app.rs  index.css  index.tsx  lib.rs  main.rs  main.tsx
ui/src/components/: ContinueButton.tsx  Footer.tsx  Navbar.tsx  RecipeElement.tsx  RecipePreview.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx  UserIcon.tsx  footer.rs  navbar.rs
ui/src/hooks/: PreferencesContext.tsx  SearchContext.tsx  useAuth.ts  useAuth.tsx
ui/src/pages/: Dashboard.tsx  Explore.tsx  LandingPage.tsx  RecipeNotFound.tsx  SignIn.tsx  SignInGoogle.tsx  SignInOptions.tsx  ViewProfile.tsx  ViewRecipe.tsx  account.rs  index.tsx  landing.rs  mod.rs
ui/src/pages/auth/: CreateAccount.tsx  EmailSent.tsx  EmailSentSuccess.tsx  EmailSignIn.tsx  SignIn.tsx  (+7 more)
ui/src/utils/: rest.ts
(+31 files in other folders)
