[workspace]
members = [".", "entity", "migration"]

[package]
name = "sea-axum-app"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.28.0", features = ["full"]}
tracing = { version = "0.1.37"}
tracing-subscriber = "0.3.17"
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "with-chrono"]}
dotenvy = "0.15.7"
entity = { verison="^0", path = "entity" }
migration = { version="^0", path = "migration" }
serde = { version = "1.0.162", features = ["derive"] }
oauth2 = "4.3.0"
reqwest = { version = "0.11.17", features = ["json"] }
axum-sessions = "0.5.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
lettre = "0.10.4"
axum-macros = "0.3.7"
leptos = "0.2.5"
leptos_meta = "0.2.5"
leptos_router =  { version = "0.2.5", features = ["csr", "ssr", "hydrate", "stable"] }
leptos_axum = { version = "0.2.5"}
tower = { version = "0.4.13" }
tower-http = { version = "0.4.0", features = ["cors"]}
serde_json = "1.0.96"
http = "0.2.9"
