[package]
name = "cilantrify-api"
version = "0.1.0"
edition = "2021"



[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["headers", "ws"] }
tokio = { version = "1.28.0", features = ["full"]}
tracing = { version = "0.1.37"}
tracing-subscriber = "0.3.17"
dotenvy = "0.15.7"
serde = { version = "1.0.162", features = ["derive"] }
oauth2 = "4.3.0"
reqwest = { version = "0.11.17", features = ["json"] }
axum-sessions = "0.5.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
lettre = "0.10.4"
axum-macros = "0.3.7"
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.4.0", features = ["cors"]}
serde_json = "1.0.96"
http = "0.2.9"
axum-auth = "0.4.0"
chrono = "0.4.26"
rand = "0.8.5"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "macros"]}
proc-macro2 = { version = "1.0.60", features=["default", "proc-macro"] }
