[package]
name = "sea-axum-app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
leptos = { version = "0.2.5", features = ["csr"] }
leptos_router = { version = "0.2.5", features = ["csr"] }
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
stylers = "0.3.1"
